--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
+# 모든 log파일 무시했으나 이건 무시하지 않음 !important.log
+!test/test1.log
+
 # 단일 파일 지정
 secret.log
 
 # 폴더 단위 지정 - git ignore가 바로 반영 안 될 수도 있음
 # 안 될 경우 git rm -r --cached test 를 통해 지워주고 다시 시도할 것
 test/
-
 # 원격 저장소 사이의 stash가 관찰하고 있는데, 이럴 경우 캐시 삭제 해야됨
+# git rm --cached *
 
 
 # 와일드카드 사용해서 모든 log 파일 무시할 것
 *.log
-
-# 모든 log파일 무시했으나 이건 무시하지 않음 !important.log
-!test/test1.log
